--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,9 +23,8 @@ jobs:
       - name: Run setup script
         shell: pixi exec --spec sed -- bash -e {0}
         run: |
-          echo "${{ github.event.pull_request.head.ref }}"
-          sed -i "s?main?${GITHUB_REF}?g" init.sh
-          sed -i "s?main?${GITHUB_REF}?g" pixi-setup.sh
+          sed -i "s?main?${{ github.event.pull_request.head.ref }}?g" init.sh
+          sed -i "s?main?${{ github.event.pull_request.head.ref }}?g" pixi-setup.sh
           ./pixi-setup.sh
 
   osx-64:
@@ -47,8 +46,8 @@ jobs:
       - name: Run setup script
         shell: pixi exec --spec sed -- zsh -e {0}
         run: |
-          sed -i "s?main?${GITHUB_REF}?g" init.sh
-          sed -i "s?main?${GITHUB_REF}?g" pixi-setup.sh
+          sed -i "s?main?${{ github.event.pull_request.head.ref }}?g" init.sh
+          sed -i "s?main?${{ github.event.pull_request.head.ref }}?g" pixi-setup.sh
           ./pixi-setup.sh
 
   osx-arm64:
@@ -70,6 +69,6 @@ jobs:
       - name: Run setup script
         shell: pixi exec --spec sed -- zsh -e {0}
         run: |
-          sed -i "s?main?${GITHUB_REF}?g" init.sh
-          sed -i "s?main?${GITHUB_REF}?g" pixi-setup.sh
+          sed -i "s?main?${{ github.event.pull_request.head.ref }}?g" init.sh
+          sed -i "s?main?${{ github.event.pull_request.head.ref }}?g" pixi-setup.sh
           ./pixi-setup.sh
