--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
         shell: pixi exec --spec sed -- bash -e {0}
         run: |
           sed -i "s?main?${{ github.event.pull_request.head.ref }}?g" pixi-setup.sh
-          sed -i "s?init.sh | bash?init.sh | sed \'s,main,${{ github.event.pull_request.head.ref }},g\' bash?" pixi-setup.sh
+          sed -i "s?init.sh | bash?init.sh | sed 's,main,${{ github.event.pull_request.head.ref }},g' | bash?" pixi-setup.sh
           ./pixi-setup.sh
 
   osx-64:
@@ -47,7 +47,7 @@ jobs:
         shell: pixi exec --spec sed -- zsh -e {0}
         run: |
           sed -i "s?main?${{ github.event.pull_request.head.ref }}?g" pixi-setup.sh
-          sed -i "s?init.sh | bash?init.sh | sed \'s,main,${{ github.event.pull_request.head.ref }},g\' bash?" pixi-setup.sh
+          sed -i "s?init.sh | bash?init.sh | sed 's,main,${{ github.event.pull_request.head.ref }},g' | bash?" pixi-setup.sh
           ./pixi-setup.sh
 
   osx-arm64:
@@ -70,5 +70,5 @@ jobs:
         shell: pixi exec --spec sed -- zsh -e {0}
         run: |
           sed -i "s?main?${{ github.event.pull_request.head.ref }}?g" pixi-setup.sh
-          sed -i "s?init.sh | bash?init.sh | sed \'s,main,${{ github.event.pull_request.head.ref }},g\' bash?" pixi-setup.sh
+          sed -i "s?init.sh | bash?init.sh | sed 's,main,${{ github.event.pull_request.head.ref }},g' | bash?" pixi-setup.sh
           ./pixi-setup.sh
