--- a/.github/workflows/dispatch_ci.yml
+++ b/.github/workflows/dispatch_ci.yml
@@ -23,8 +23,8 @@ jobs:
       - name: Run setup script
         shell: pixi exec --spec sed -- bash -e {0}
         run: |
-          sed -i "s?main?${{ github.event.pull_request.head.ref }}?g" init.sh
           sed -i "s?main?${{ github.event.pull_request.head.ref }}?g" pixi-setup.sh
+          sed -i "s?init.sh | bash?init.sh | sed 's,main,${{ github.event.pull_request.head.ref }},g' | bash?" pixi-setup.sh
           ./pixi-setup.sh
 
   osx-64_pixi:
@@ -46,8 +46,8 @@ jobs:
       - name: Run setup script
         shell: pixi exec --spec sed -- bash -e {0}
         run: |
-          sed -i "s?main?${{ github.event.pull_request.head.ref }}?g" init.sh
           sed -i "s?main?${{ github.event.pull_request.head.ref }}?g" pixi-setup.sh
+          sed -i "s?init.sh | bash?init.sh | sed 's,main,${{ github.event.pull_request.head.ref }},g' | bash?" pixi-setup.sh
           ./pixi-setup.sh
 
   osx-arm64_pixi:
@@ -69,6 +69,6 @@ jobs:
       - name: Run setup script
         shell: pixi exec --spec sed -- bash -e {0}
         run: |
-          sed -i "s?main?${{ github.event.pull_request.head.ref }}?g" init.sh
           sed -i "s?main?${{ github.event.pull_request.head.ref }}?g" pixi-setup.sh
+          sed -i "s?init.sh | bash?init.sh | sed 's,main,${{ github.event.pull_request.head.ref }},g' | bash?" pixi-setup.sh
           ./pixi-setup.sh
