--- a/.github/workflows/dispatch_ci.yml
+++ b/.github/workflows/dispatch_ci.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           sed -i "s?main?${{ github.event.pull_request.head.ref }}?g" pixi-setup.sh
           sed -i "s?init.sh | bash?init.sh | sed 's,main,${{ github.event.pull_request.head.ref }},g' | bash?" pixi-setup.sh
-          ./pixi-setup.sh
+          printf '\n\n' | ./pixi-setup.sh
 
   osx-64_pixi:
     runs-on: macos-latest
@@ -48,7 +48,7 @@ jobs:
         run: |
           sed -i "s?main?${{ github.event.pull_request.head.ref }}?g" pixi-setup.sh
           sed -i "s?init.sh | bash?init.sh | sed 's,main,${{ github.event.pull_request.head.ref }},g' | bash?" pixi-setup.sh
-          ./pixi-setup.sh
+          printf '\n\n' | ./pixi-setup.sh
 
   osx-arm64_pixi:
     runs-on: macos-14
@@ -71,4 +71,4 @@ jobs:
         run: |
           sed -i "s?main?${{ github.event.pull_request.head.ref }}?g" pixi-setup.sh
           sed -i "s?init.sh | bash?init.sh | sed 's,main,${{ github.event.pull_request.head.ref }},g' | bash?" pixi-setup.sh
-          ./pixi-setup.sh
+          printf '\n\n' | ./pixi-setup.sh
