fix the hardcoded repo owner name

--- a/.github/workflows/dispatch_ci.yml
+++ b/.github/workflows/dispatch_ci.yml
@@ -23,8 +23,8 @@ jobs:
       - name: Run setup script
         shell: pixi exec --spec sed -- bash -e {0}
         run: |
-          sed -i "s?main?${{ github.ref_name }}?g" pixi-setup.sh
-          sed -i "s?init.sh | bash?init.sh | sed 's,main,${{ github.ref_name }},g' | bash?" pixi-setup.sh
+          sed -i "s?StatFunGen/pixi-setup/main?${{ github.repository }}/${{ github.ref_name }}?g" pixi-setup.sh
+          sed -i "s?init.sh | bash?init.sh | sed 's,StatFunGen/pixi-setup/main,${{ github.repository }}/${{ github.ref_name }},g' | bash?" pixi-setup.sh
           printf "\n1\n" | ./pixi-setup.sh
 
   osx-64_pixi:
@@ -46,8 +46,8 @@ jobs:
       - name: Run setup script
         shell: pixi exec --spec sed -- bash -e {0}
         run: |
-          sed -i "s?main?${{ github.ref_name }}?g" pixi-setup.sh
-          sed -i "s?init.sh | bash?init.sh | sed 's,main,${{ github.ref_name }},g' | bash?" pixi-setup.sh
+          sed -i "s?StatFunGen/pixi-setup/main?${{ github.repository }}/${{ github.ref_name }}?g" pixi-setup.sh
+          sed -i "s?init.sh | bash?init.sh | sed 's,StatFunGen/pixi-setup/main,${{ github.repository }}/${{ github.ref_name }},g' | bash?" pixi-setup.sh
           printf "\n1\n" | ./pixi-setup.sh
 
   osx-arm64_pixi:
@@ -69,6 +69,6 @@ jobs:
       - name: Run setup script
         shell: pixi exec --spec sed -- bash -e {0}
         run: |
-          sed -i "s?main?${{ github.ref_name }}?g" pixi-setup.sh
-          sed -i "s?init.sh | bash?init.sh | sed 's,main,${{ github.ref_name }},g' | bash?" pixi-setup.sh
+          sed -i "s?StatFunGen/pixi-setup/main?${{ github.repository }}/${{ github.ref_name }}?g" pixi-setup.sh
+          sed -i "s?init.sh | bash?init.sh | sed 's,StatFunGen/pixi-setup/main,${{ github.repository }}/${{ github.ref_name }},g' | bash?" pixi-setup.sh
           printf "\n1\n" | ./pixi-setup.sh
